clusters/talos-ottawa/apps/hermes/app/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hermes
  labels:
    pod-security.kubernetes.io/enforce: restricted
    kustomize.toolkit.fluxcd.io/prune: disabled
