clusters/talos-ottawa/apps/hermes/app/egress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: stpetersburg-vllm
  annotations:
    kustomize.toolkit.fluxcd.io/ssa: IfNotPresent
    tailscale.com/tailnet-fqdn: stpetersburg-vllm.keiretsu.ts.net
    tailscale.com/proxy-group: common-egress
spec:
  externalName: placeholder
  type: ExternalName
  ports:
    - name: http
      port: 80
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: aperture
  annotations:
    kustomize.toolkit.fluxcd.io/ssa: IfNotPresent
    tailscale.com/tailnet-fqdn: aperture.keiretsu.ts.net
    tailscale.com/proxy-group: common-egress
spec:
  externalName: placeholder
  type: ExternalName
  ports:
    - name: http
      port: 80
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: searxng
  annotations:
    kustomize.toolkit.fluxcd.io/ssa: IfNotPresent
    tailscale.com/tailnet-fqdn: stpetersburg-searxng.keiretsu.ts.net
    tailscale.com/proxy-group: common-egress
spec:
  externalName: placeholder
  type: ExternalName
  ports:
    - name: http
      port: 80
      protocol: TCP
